fix(plugins/plugin-core-support): improved zooming of svgs
Fixes #2025

--- a/plugins/plugin-core-support/web/css/zoom.css
+++ b/plugins/plugin-core-support/web/css/zoom.css
@@ -43,48 +43,48 @@
 .page[data-zoom="1"] svg.zoomable { transform: scale(1); }
 .page[data-zoom="2"] .zoomable .view-lines > div,
 .page[data-zoom="2"] .zoomable { font-size: 106.25% !important; }
-/*.page[data-zoom="2"] svg.zoomable { transform: scale(1.0625); }*/
+.page[data-zoom="2"] .graphical-icon > svg { width: 21.25px; height: 21.25px; }
 .page[data-zoom="3"] .zoomable .view-lines > div,
 .page[data-zoom="3"] .zoomable { font-size: 112.5% !important; }
-/*.page[data-zoom="3"] svg.zoomable { transform: scale(1.125); }*/
+.page[data-zoom="3"] .graphical-icon > svg { width: 22.25px; height: 22.25px; }
 .page[data-zoom="4"] .zoomable .view-lines > div,
 .page[data-zoom="4"] .zoomable { font-size: 118.75% !important; }
 .page[data-zoom="4"] .zoomable[data-bounded-zoom] { font-size: 112.5% !important; }
-/*.page[data-zoom="4"] svg.zoomable { transform: scale(1.1875); }*/
+.page[data-zoom="4"] .graphical-icon > svg { width: 23.75px; height: 23.75px; }
 .page[data-zoom="5"] .zoomable .view-lines > div,
 .page[data-zoom="5"] .zoomable { font-size: 125% !important; }
 .page[data-zoom="5"] .zoomable[data-bounded-zoom] { font-size: 112.5% !important; }
-/*.page[data-zoom="5"] svg.zoomable { transform: scale(1.25); }*/
+.page[data-zoom="5"] .graphical-icon > svg { width: 25px; height: 25px; }
 .page[data-zoom="6"] .zoomable .view-lines > div,
 .page[data-zoom="6"] .zoomable { font-size: 131.25% !important; }
 .page[data-zoom="6"] .zoomable[data-bounded-zoom] { font-size: 112.5% !important; }
-/*.page[data-zoom="6"] svg.zoomable { transform: scale(1.3125); }*/
+.page[data-zoom="6"] .graphical-icon > svg { width: 26.25px; height: 26.25px; }
 .page[data-zoom="7"] .zoomable .view-lines > div,
 .page[data-zoom="7"] .zoomable { font-size: 137.5% !important; }
 .page[data-zoom="7"] .zoomable[data-bounded-zoom] { font-size: 112.5% !important; }
-/*.page[data-zoom="7"] svg.zoomable { transform: scale(1.375); }*/
+.page[data-zoom="7"] .graphical-icon > svg { width: 27.5px; height: 27.5px; }
 .page[data-zoom="8"] .zoomable .view-lines > div,
 .page[data-zoom="8"] .zoomable { font-size: 143.75% !important; }
 .page[data-zoom="8"] .zoomable[data-bounded-zoom] { font-size: 112.5% !important; }
-/*.page[data-zoom="8"] svg.zoomable { transform: scale(1.4375); }*/
+.page[data-zoom="8"] .graphical-icon > svg { width: 28.75px; height: 28.75px; }
 .page[data-zoom="9"] .zoomable .view-lines > div,
 .page[data-zoom="9"] .zoomable { font-size: 150% !important; }
 .page[data-zoom="9"] .zoomable[data-bounded-zoom] { font-size: 112.5% !important; }
-/*.page[data-zoom="9"] svg.zoomable { transform: scale(1.5); }*/
+.page[data-zoom="9"] .graphical-icon > svg { width: 30px; height: 30px; }
 .page[data-zoom="10"] .zoomable .view-lines > div,
 .page[data-zoom="10"] .zoomable { font-size: 156.25% !important; }
 .page[data-zoom="10"] .zoomable[data-bounded-zoom] { font-size: 112.5% !important; }
-/*.page[data-zoom="10"] svg.zoomable { transform: scale(1.5625); }*/
+.page[data-zoom="10"] .graphical-icon > svg { width: 31.25px; height: 31.25px; }
 .page[data-zoom="0"] .zoomable .view-lines > div,
 .page[data-zoom="0"] .zoomable { font-size: 93.75% !important; }
 .page[data-zoom="0"] .zoomable[data-bounded-zoom] { font-size: 100% !important; }
-/*.page[data-zoom="0"] svg.zoomable { transform: scale(0.9375); }*/
+.page[data-zoom="0"] .graphical-icon > svg { width: 18.75px; height: 18.75px; }
 .page[data-zoom="-1"] .zoomable .view-lines > div,
 .page[data-zoom="-1"] .zoomable { font-size: 87.5% !important; }
 .page[data-zoom="-1"] .zoomable[data-bounded-zoom] { font-size: 100% !important; }
-/*.page[data-zoom="-1"] svg.zoomable { transform: scale(0.875); }*/
+.page[data-zoom="-1"] .graphical-icon > svg { width: 17.5px; height: 17.5px; }
 .page[data-zoom="-2"] .zoomable .view-lines > div,
 .page[data-zoom="-2"] .zoomable { font-size: 81.25% !important; }
 .page[data-zoom="-2"] .zoomable[data-bounded-zoom] { font-size: 100% !important; }
-/*.page[data-zoom="-2"] svg.zoomable { transform: scale(0.8125); }*/
+.page[data-zoom="-2"] .graphical-icon > svg { width: 16.25px; height: 16.25px; }
 
