--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -405,7 +405,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
     margin: 0 !important;
 }
 .repl-result, .repl-input input, .repl-input-like {
-    font-size: 0.75em;
+    font-size: 0.875em;
 }
 .repl-input input, .repl-input-like {
     color: var(--color-text-01);
@@ -975,7 +975,7 @@ sidecar .sidecar-header-icon {
 sidecar .sidecar-header-name {
     flex: 1;
     font-weight: 400;
-    font-size: 1.75em;
+    font-size: 2em;
     display: flex;
     align-items: center;
 
@@ -1054,12 +1054,12 @@ sidecar.entity-is-activations .sidecar-header-name  .sidecar-header-name-content
 }
 sidecar .sidecar-header-secondary-content {
     padding-left: 1rem;
-    font-size: 0.75em;
+    font-size: 0.875em;
     display: flex;
     align-items: center;
     color: var(--color-text-02);
     letter-spacing: 0.32px;
-    line-height: 1.25rem;
+    line-height: 1.25em;
 }
 sidecar .sidecar-header-secondary-content .kind-content {
     overflow: hidden;
@@ -1335,7 +1335,7 @@ code.fancy-code, code.fancy-code.hljs {
     font-size: 0.6875em;
 }
 .smaller-text {
-    font-size: 0.75em;
+    font-size: 0.875em;
 }
 .somewhat-smaller-text {
     font-size: 0.925em;
