feat: new light theme
also a few fixes to dark theme

Fixes #2035
Fixes #2036
Fixes #2038

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class='left-tab-stripe-bottom-buttons'>
           <div class='left-tab-stripe-button smaller-button' id='new-tab-button' data-balloon-disabled='Open a new tab' data-balloon-pos='right' data-balloon-length='fit'>
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M8.5 7.5V3h-1v4.5H3v1h4.5V13h1V8.5H13v-1z"></path></svg>
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M17 15V7h-2v8H7v2h8v8h2v-8h8v-2h-8z"></path></svg>
           </div>
           <div class='left-tab-stripe-button smaller-button' id='help-button'>
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm0 23a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 25zm1.14-7.75v2.5h-2.25V15H17a2.38 2.38 0 0 0 0-4.75h-1.5a2.38 2.38 0 0 0-2.38 2.37v.64h-2.23v-.64A4.63 4.63 0 0 1 15.52 8H17a4.63 4.63 0 0 1 .12 9.25z"></path></svg>
@@ -239,10 +239,10 @@
               </div>
             </div> <!-- back button -->
 
-            <div class='sidecar-header-icon-wrapper'><div class='sidecar-header-icon'></div></div>
+            <div class='sidecar-header-icon-wrapper'><span class='sidecar-header-icon'></span></div>
 
             <!-- e.g. kubernetes namespace or openwhisk package name, and the like -->
-            <span class='package-prefix'></span>
+            <div class='sidecar-header-icon-wrapper'><span class='package-prefix'></span></div>
 
             <!-- flush-right buttons go here -->
             <div class='sidecar-bottom-stripe-mode-bits sidecar-bottom-stripe-button-container'></div>
